logi-core/k8s/overlays/prod/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logi-core-prod
  labels:
    name: logi-core-prod
    environment: production
